p2/part4/t11.output
running e2c
compiling the C generated code
t11.c:4:2: error: expected expression
 = 25
 ^
t11.c:5:2: error: expression is not assignable
 = 12
 ^
2 errors generated.
